--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "hugo-PaperMod"]
-	path = hugo-PaperMod
-	url = https://github.com/adityatelange/hugo-PaperMod.git
+[submodule "themes/PaperMod"]
+        path = themes/PaperMod
+        url = https://github.com/adityatelange/hugo-PaperMod.git
 
 [submodule "public"]
 	path = public
